--- a/index.html
+++ b/index.html
@@ -3,34 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>显示输入框</title>
+  <title>Iframe with Scaling and Shifting</title>
   <style>
     iframe {
       width: 100%;
       height: 100vh;
+      transform: scale(1.25) translateX(-20%);
+      transform-origin: 0 0;
       border: none;
     }
   </style>
 </head>
 <body>
-  <iframe src="https://metaso.cn/" id="targetFrame"></iframe>
-
-  <script>
-    document.getElementById('targetFrame').onload = function() {
-      const iframeDoc = this.contentWindow.document;
-
-      // 隐藏左侧菜单栏
-      const leftMenu = iframeDoc.querySelector('.LeftMenu_menu-container__n4peE'); // 更新选择器为左边栏的具体类名
-      if (leftMenu) {
-        leftMenu.style.display = 'none';
-      }
-
-      // 其他可能的样式调整
-      const mainContent = iframeDoc.getElementById('searchRoot'); // 更新选择器为右侧内容区的具体ID
-      if (mainContent) {
-        mainContent.style.marginLeft = '0'; // 移动内容区
-      }
-    };
-  </script>
+  <iframe src="https://metaso.cn"></iframe>
 </body>
 </html>
